--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,7 @@ server.port: 8081
 spring:
   devtools.livereload.port: 35730
   datasource:
+    # jdbc:mysql://localhost:3306/admin?serverTimezone=Asia/Seoul
     url: ${LOCAL_DB_URL}
     username: ${LOCAL_DB_USERNAME}
     password: ${LOCAL_DB_PASSWORD}
